# playbook-runner

./: .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  TODO.md  biome.json  bts.jsonc  compose.prod.yml  compose.yml  docker-compose.yml  opencode.json  package.json  pyrightconfig.json  skills-lock.json  tsconfig.json  turbo.json
.astro/: content.d.ts
.github/workflows/: docker-build.yml
apps/ansible/: .dockerignore  .gitignore  Dockerfile  package.json  pyproject.toml
apps/ansible/app/: main.py
apps/ansible/app/api/: deps.py
apps/ansible/app/api/routes/: health.py  me.py  routes.py
apps/ansible/app/api/routes/v0/: command.py  ping.py  run.py  run_internal.py  script.py
apps/ansible/app/core/: config.py
apps/ansible/app/services/ansible/: backend_client.py  events.py  materialize.py  runner.py  sse.py
apps/backend/: .env.example  Dockerfile  package.json  tsconfig.json  tsdown.config.ts
apps/backend/src/: index.ts
apps/frontend/: .gitignore  Caddyfile  Dockerfile  README.md  astro.config.mjs  package.json  playwright.config.ts  start.sh
apps/frontend/scripts/: check-translations.ts
apps/frontend/src/: env.d.ts  middleware.ts
apps/frontend/tests/: auth.setup.ts  auth.spec.ts  guest.spec.ts  helpers.ts  (+1 more)
apps/server/: package.json  tsconfig.json  tsdown.config.ts
apps/web/: Caddyfile  Dockerfile  astro.config.mjs  package.json  start.sh  tsconfig.json
playbooks/: apt-upgrade.yml  check-uptime.yml  clean-docker-img.yml  disk-usage.yml  fail2ban-status.yml  gather-facts.yml  ping.yml
scripts/: bootstrap.sh
(+297 files in other folders)
