[project]
name = "playbook-runner-ansible"
version = "0.3.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible>=14.1.0",
    "ansible-core>=2.18.0",
    "ansible-runner>=2.4.3",
    "fastapi[standard]>=0.138.2",
    "scalar-fastapi>=1.8.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
